# MindBridge

./: .gitignore  README.md  Readme.md
Client/: package-lock.json  package.json  vite.config.js
Client/src/: App.jsx
Client/src/services/: api.js
server/: .env  .env.example  .gitignore  API-DOCUMENTATION.md  Readme.md  pyproject.toml  requirements.txt  run_tests.ps1
server/src/: main.py
server/src/api/routes/: assessment.py  auth.py  profile.py
server/src/core/: config.py  constants.py  dependencies.py  security.py
server/src/db/: mongodb.py
server/src/graph/: assessment_graph.py
server/src/models/: assessment.py  user.py
server/src/notebooks/: PHQ9.ipynb
server/src/rag/: chroma_client.py
server/src/routes/: health_routes.py  screening_routes.py
server/src/schemas/: assessment.py  screening_schema.py  user.py
server/src/services/: assessment_service.py  screening_service.py  user_service.py
server/tests/: conftest.py  scratch_test.py  test_assessment.py  test_auth.py  test_chromaDB.py  test_crisis.py  test_profile.py  test_screening_service.py
