[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "bcrypt==3.2.2",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "click==8.3.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==46.0.7",
    "dnspython==2.8.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "fastapi==0.136.0",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.17.0",
    "fastar==0.11.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "motor==3.7.1",
    "passlib==1.7.4",
    "pyasn1==0.6.3",
    "pycparser==3.0 ; implementation_name != 'PyPy'",
    "pydantic==2.13.1",
    "pydantic-core==2.46.1",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pymongo==4.16.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.26",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rsa==4.9.1",
    "sentry-sdk==2.58.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "starlette==1.0.0",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.44.0",
    "uvloop==0.22.1 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==1.1.1",
    "websockets==16.0",
]
