[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "bcrypt==3.2.2",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==46.0.7",
    "dnspython==2.8.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "fastapi==0.136.0",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.17.0",
    "fastar==0.11.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain-core==1.3.3",
    "langchain-protocol==0.0.15",
    "langgraph==1.1.10",
    "langgraph-checkpoint==4.0.3",
    "langgraph-prebuilt==1.0.13",
    "langgraph-sdk==0.3.14",
    "langsmith==0.8.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "motor==3.7.1",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "pyasn1==0.6.3",
    "pycparser==3.0 ; implementation_name != 'PyPy'",
    "pydantic==2.13.1",
    "pydantic-core==2.46.1",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pymongo==4.16.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.26",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rsa==4.9.1",
    "sentry-sdk==2.58.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.44.0",
    "uvloop==0.22.1 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "xxhash==3.7.0",
    "zstandard==0.25.0",
]
